edit commandline